# ESP32

Arduino/ArduinoJson/src/: main.cpp
Arduino/Control/src/: main.cpp
Arduino/ESP32-Arduino-FreeRTOS/1：任务参数/: platformio.ini  readme.md
Arduino/ESP32-Arduino-FreeRTOS/3：信号量/: 队列.md
Arduino/ESP32-Arduino-FreeRTOS/6：任务通知/: platformio.ini  事件标志组.md  任务通知.md  信号量.md
Arduino/ESP32-Arduino-FreeRTOS/7：内存管理/: platformio.ini  任务通知.md  软件定时器.md
Arduino/ESP32-Demo/include/: main.h
Arduino/ESP32-S3-Project/: Flash_8MB.csv  platformio.ini  readme.md
Arduino/ESP32-S3-Project/data/: readme.txt
Arduino/ESP32-S3-Project/include/: common.h  fatfs_sd.h  main.h  st7701s_lvgl.h  touch.h  wifi_fun.h
Arduino/ESP32-S3-Project/src/: common.cpp  fatfs_sd.cpp  main.cpp  main.h  st7701s_lvgl.cpp  wifi_fun.cpp
Arduino/ESP32_JSON/data/: LED.html  index.html
Arduino/ESP32_TIM/src/: main.cpp
Arduino/Mqtt/: mqtt.md
Arduino/Mqtt/Mqtt-1883/: platformio.ini
Arduino/Mqtt/Mqtt-8883/: mqtt.md  platformio.ini
Arduino/Mqtt/src/: main.cpp
Arduino/Oled_066/: platformio.ini
Arduino/Oled_066/include/: common.h  main.h
Arduino/Oled_066/src/: common.cpp  key_cfg.cpp  main.cpp
Arduino/Oled_066/test/: README
Arduino/TIM/: ESP引脚资源.md
Arduino/Touch_Exti/src/: main.cpp
Arduino/WS2812/: platformio.ini
Arduino/WS2812/src/: main.cpp
Arduino/oled_ui/: ota_fs_16M.csv
Arduino/oled_ui/include/: key_cfg.h  (+1 more)
IDF/11_ST7789/: sdkconfig  sdkconfig.old
IDF/11_st7701s/: CMakeLists.txt  sdkconfig  sdkconfig.old
IDF/11_st7701s/main/: CMakeLists.txt  main.c
IDF/11_st7789v2/: CMakeLists.txt  sdkconfig  sdkconfig.old
IDF/11_st7789v2_lvgl/: sdkconfig  sdkconfig.old
IDF/1_GPIO_OUTPUT/: CMakeLists.txt
IDF/7_WiFi/: CMakeLists.txt
IDF/7_WiFi_AP/: sdkconfig.old  ss.md
IDF/8_WiFi_TCP/: CMakeLists.txt
IDF/99_lvgl/rgb480x480-demo/main/: CMakeLists.txt  lvgl_arc.c  lvgl_arc.h  lvgl_checkbox.c  lvgl_checkbox.h  lvglstart.c  lvglstart.h  main.c  p_wifi_sta.c  sd_spi_fat.c
IDF/99_lvgl/rgb480x480-show-image/main/: CMakeLists.txt  datafile.h  idf_component.yml  lvgl_arc.c  lvgl_interface.c  lvgl_obj.c  lvglstart.c  lvglstart.h  main.c  p_mqtt.c  p_mqtt.h  p_wifi_sta.c  p_wifi_sta.h
IDF/rgb480x480/: sdkconfig  sdkconfig.old
PID/: pid.c
(+157 files in other folders)
